--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     />
   </head>
   <body>
-    <h1>Love running!</h1>
-    <h2>Do you love running?</h2>
+    <!-- Header -->
+    <header>Header</header>
+
+    <!-- Main Content -->
+    <main>Main content</main>
+
+    <!-- Footer -->
+    <footer>Footer</footer>
   </body>
 </html>
