--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Title -->
-    <title>Love Running</title>
+    <title>Gallery</title>
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
@@ -46,17 +46,15 @@
       </label>
       <nav>
         <ul id="menu">
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="gallery.html" class="active">Gallery</a></li>
           <li><a href="signup.html">Sign Up</a></li>
         </ul> 
       </nav>
     </header>
 
     <!-- Main Content -->
-    <main>
-      <section id="hero"></section>
-    </main>
+    <main>Gallery</main>
 
     <!-- Footer -->
     <footer id="social-networks">
@@ -76,5 +74,4 @@
     <script src="https://kit.fontawesome.com/e38db5ed09.js" crossorigin="anonymous"></script>
 
   </body>
-  
-</html>
+</html
